--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "graphql": "^16.6.0",
     "graphql-compiler": "^1.7.0",
     "http-proxy-middleware": "^2.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-relay": "^14.1.0",
     "react-scripts": "5.0.0",
     "relay-compiler-language-typescript": "^15.0.1",
