--- a/client/package.json
+++ b/client/package.json
@@ -9,23 +9,19 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@types/relay-runtime": "^14.1.3",
     "graphql": "^16.6.0",
     "graphql-compiler": "^1.7.0",
     "http-proxy-middleware": "^2.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-relay": "^14.1.0",
     "react-scripts": "5.0.0",
     "relay-compiler-language-typescript": "^15.0.1",
     "relay-runtime": "^14.1.0",
     "relay-test-utils": "^14.1.0",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
-  },
-  "peerDependencies": {
+    "web-vitals": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -34,7 +30,8 @@
     "build": "npm run relay && react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject",
-    "relay": "relay-compiler"
+    "relay": "relay-compiler",
+    "postgraphile": "npx postgraphile --cors -c postgres:///todo_app -s todo_app --enhance-graphiql --classic-ids --watch"
   },
   "eslintConfig": {
     "extends": [
