--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@button-inc/component-library": "^1.0.1",
-    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
@@ -15,15 +15,15 @@
     "graphql": "^16.6.0",
     "graphql-compiler": "^1.7.0",
     "http-proxy-middleware": "^2.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-relay": "^14.1.0",
     "react-scripts": "5.0.0",
     "relay-compiler-language-typescript": "^15.0.1",
     "relay-runtime": "^14.1.0",
     "relay-test-utils": "^14.1.0",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "npm run relay && react-scripts start",
