--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "@button-inc/component-library": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^18.0.21",
@@ -18,7 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-relay": "^14.1.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "relay-compiler-language-typescript": "^15.0.1",
     "relay-runtime": "^14.1.0",
     "relay-test-utils": "^14.1.0",
