--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,37 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@button-inc/component-library": "^1.0.1",
+  "name": "@button-inc/relay-testing-library",
+  "version": "0.0.1",
+  "description": "A relay component testing helper",
+  "author": "Button Inc.",
+  "license": "Apache-2.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "prepare": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/button-inc/relay-testing-library.git"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/react-relay": "^14.1.2",
+    "babel-jest": "^29.2.1",
+    "babel-plugin-relay": "^14.1.0",
+    "react-compiler": "^1.0.3",
+    "relay-compiler": "^14.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.4.1",
@@ -21,43 +49,6 @@
     "relay-compiler-language-typescript": "^15.0.1",
     "relay-runtime": "^14.1.0",
     "relay-test-utils": "^14.1.0",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "npm run relay && react-scripts start",
-    "build": "npm run relay && react-scripts build",
-    "test": "jest",
-    "eject": "react-scripts eject",
-    "relay": "relay-compiler",
-    "postgraphile": "npx postgraphile --cors -c postgres:///todo_app -s todo_app --enhance-graphiql --classic-ids --watch"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/react-relay": "^14.1.2",
-    "babel-jest": "^29.2.1",
-    "babel-plugin-relay": "^14.1.0",
-    "react-compiler": "^1.0.3",
-    "relay-compiler": "^14.1.0"
+    "typescript": "^4.5.5"
   }
 }
