--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,8 +17,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+    "jsx": "react-jsx",
+    "declaration": true,
+    "strictNullChecks": true,
+    "outDir": "dist",
+    "sourceMap": true,
+    "rootDir": "src"
+
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
