--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@button-inc/relay-testing-library",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A relay component testing helper",
   "author": "Button Inc.",
   "license": "Apache-2.0",
@@ -10,8 +10,14 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "prepare": "npm run build"
+    "transpile": "tsc",
+    "prepare": "npm run transpile",
+    "start": "npm run relay && react-scripts start",
+    "build": "npm run relay && react-scripts build",
+    "test": "jest",
+    "eject": "react-scripts eject",
+    "relay": "relay-compiler",
+    "postgraphile": "npx postgraphile --cors -c postgres:///todo_app -s todo_app --enhance-graphiql --classic-ids --watch"
   },
   "repository": {
     "type": "git",
@@ -29,30 +35,30 @@
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
     "@types/react-relay": "^14.1.2",
-    "@types/relay-runtime": "^14.1.3",
     "babel-jest": "^29.2.1",
     "babel-plugin-relay": "^14.1.0",
+    "react-compiler": "^1.0.3",
+    "relay-compiler": "^14.1.0"
+  },
+  "dependencies": {
+    "@button-inc/component-library": "^1.0.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.6",
+    "@types/relay-runtime": "^14.1.3",
     "graphql": "^16.6.0",
     "graphql-compiler": "^1.7.0",
     "http-proxy-middleware": "^2.0.3",
     "react": "^18.2.0",
-    "react-compiler": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-relay": "^14.1.0",
     "react-scripts": "^5.0.1",
-    "relay-compiler": "^14.1.0",
     "relay-compiler-language-typescript": "^15.0.1",
     "relay-runtime": "^14.1.0",
     "relay-test-utils": "^14.1.0",
-    "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "@button-inc/component-library": "^1.0.3",
+    "typescript": "^4.5.5",
     "web-vitals": "^3.0.4"
   }
 }
