--- a/example-app/package.json
+++ b/example-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@button-inc/component-library": "^1.0.1",
+    "@button-inc/relay-testing-library": "^0.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.4.1",
