--- a/packages/relay-testing-library/.pre-commit-config.yaml
+++ b/packages/relay-testing-library/.pre-commit-config.yaml
@@ -1,18 +1,4 @@
 repos:
-  - repo: local
-    hooks:
-      - id: prettier
-        name: Prettier
-        language: script
-        entry: ./.bin/pre-commit-format.sh
-        stages: [commit]
-  - repo: local
-    hooks:
-      - id: eslint
-        name: ESLint
-        language: system
-        files: \.(j|t)sx?$
-        entry: ./.bin/pre-commit-lint.sh
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
@@ -26,8 +12,23 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+  - repo: local
+    hooks:
+      - id: prettier
+        name: Prettier
+        language: system
+        files: \.(j|t)sx?$
+        entry: bash -c 'yarn format'
+        pass_filenames: false
+  - repo: local
+    hooks:
+      - id: eslint
+        name: ESLint
+        language: system
+        files: \.(j|t)sx?$
+        entry: bash -c 'yarn lint'
+        pass_filenames: false
   - repo: https://github.com/jorisroovers/gitlint
     rev: v0.12.0
     hooks:
       - id: gitlint
-
