--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,16 @@ repos:
         language: script
         entry: ./.bin/pre-commit-lint.sh
         stages: [commit]
+  # - repo: local
+  #   hooks:
+  #     - id: eslint2
+  #       name: Run lint from yarn
+  #       language: system
+  #       files: \.(j|t)sx?$
+  #       entry: bash -c 'yarn lint'
+  #       pass_filenames: false
   - repo: https://github.com/jorisroovers/gitlint
     rev: v0.12.0
     hooks:
       - id: gitlint
+exclude: "example-app/*"
